Containers/l5/redmine-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine-deploy
  namespace: db
  labels:
    app: redmine-deploy
spec:
  selector:
    matchLabels:
      app: redmine-deploy
  replicas: 1
  # strategy:
  #   rollingUpdate:
  #     maxSurge: 25%
  #     maxUnavailable: 25%
  #   type: RollingUpdate
  template:
    metadata:
      labels:
        app: redmine-deploy
    spec:
      containers:
        - name: redmine-deploy
          image: redmine:4.1.1
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 1000m
              memory: 1048Mi
          ports:
            - containerPort: 3000
              name: redmine-deploy
      # restartPolicy: Always
