Containers/l5/postgres-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: db
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
  type: ClusterIP
