Containers/l5/redmine-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redmine-svc
  namespace: db
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: redmine-deploy
  type: ClusterIP
