Containers/l5/ingress-redmine.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redmine-ingress
  namespace: db
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    # - host: redmine.local
    - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: redmine-svc
                port:
                  number: 3000
